src/test/ui/lub-glb/old-lub-glb-hr-noteq2.basenoleak.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/old-lub-glb-hr-noteq2.rs:26:14
   |
LL |       let z = match 22 {
   |  _____________-
LL | |         0 => y,
   | |              - this is found to be of type `for<'a> fn(&'a u8, &'a u8) -> &'a u8`
LL | |         _ => x,
   | |              ^ types differ
LL | |
...  |
LL | |
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected fn pointer `for<'a> fn(&'a u8, &'a u8) -> &'a u8`
              found fn pointer `for<'a, 'b> fn(&'a u8, &'b u8) -> &'a u8`
help: consider removing the ``
   |
LL -         _ => x,
LL +         _ => x,
   | 

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
